        * [BUGFIX]: #2774 Fixed handling triggers (when modifying table) in foreign tables, triggers referencing table in its subqueries, etc.
        * [BUGFIX]: Fixed executing SELECT in SQLite2 for columns that need wrapping.
        * [BUGFIX]: Fixed editing data for tables transparently attached in the SQL query.

[3.0.2]
        * [ADDED]: Full support for the interface translations.
        * [ADDED]: Polish translation.
        * [ADDED]: #219, #2711 Reset autoincrement feature to context menu of table and to structure toolbar in table window.
        * [ADDED]: #2715 Added "rows affected" to the execution result message for INSERT/DELETE/UPDATE queries.
        * [BUGFIX]: Fixed deleting column from table that is the only column covered by an index or an "UPDATE OF" trigger.
        * [BUGFIX]: #2703 Fixed compilation errors on GCC 4.9.
        * [BUGFIX]: #2707 Fixed crash when importing CSV file with empty value for last column.
        * [BUGFIX]: Valid objects in SQL editor are now highlighted and are Ctrl+clickable (the feature was there, but was broken and it didn't work).
        * [BUGFIX]: Fixed invalid 'modified' status when focusing out NumberMultiEditor in FormView, resulting in uncommited change on FormView, even there was no change.
        * [BUGFIX]: #2698 Fixed double precision numbers displaying in the Grid View.
        * [BUGFIX]: #2696 Fixed handling foreign keys when the main table was not renamed, just columns changed.
        * [BUGFIX]: #2713 Fixed foreign key actions in Foreign Key dialog, so they are no longer the same for ON UPDATE and ON DELETE, even they were configured differently.
        * [BUGFIX]: #2715 Fixed storing rows affected/selected in SQL Editor history (bug since version 3.0.0 caused "rows" column in SQL history to be always 0).
        * [BUGFIX]: Main window toolbar is updated after creating/deleting database objects (it was not).
        * [BUGFIX]: #2722 Fixed crash when exporting database without data.