@@ -16,6 +16,7 @@
         * [BUGFIX]: #2774 Fixed handling triggers (when modifying table) in foreign tables, triggers referencing table in its subqueries, etc.
         * [BUGFIX]: Fixed executing SELECT in SQLite2 for columns that need wrapping.
         * [BUGFIX]: Fixed editing data for tables transparently attached in the SQL query.
+        * [BUGFIX]: Fixed Shortcut titles translation in configuration dialog.
 
 [3.0.2]
         * [ADDED]: Full support for the interface translations.
